Added exceptions and service classes for product and category

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=8069
 
+server.servlet.contextPath=/api
+
+logging.file.name=lti-hokart.log
+
+spring.datasource.url=jdbc:mysql://localhost:3306/hokart
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
