Added request handlers for products and categories

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ build/
 ### application.properties ###
 !**/src/main/resources/application.properties
 src/main/resources/application.properties
+
+### Logs ###
+*.log*
+lti-hokart.log
