--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+logging.file.name=lti-hokart.log
+
+#database connection properties - MySQL 
+
+spring.datasource.url=jdbc:mysql://localhost:3306/ecommercedb
+spring.datasource.username=root
+spring.datasource.password=Sitvangi@1407
+spring.jpa.hibernate.ddl-auto=update
 
